--- a/src/index.html
+++ b/src/index.html
@@ -28,6 +28,7 @@
     <include src="./partials/example.html"></include>
     <include src="./partials/about.html"></include>
     <include src="./partials/blog.html"></include>
+    <includa src="./partials/footer.html"></includa>
     <!-- Skrypt jest na samym dole kodu. On juz ma w sobie podłączony SAAS plik. -->
     <script src="./index.js" type="module"></script>
     <script src="./js/modal.js"></script>
