--- a/footer.html/footer.html
+++ b/footer.html/footer.html
@@ -1,4 +1,4 @@
-footer>
+<footer>
         <div class="footer-div">
             <div class="footer-logo">
                 <svg class="footer-icon-logo">
