--- a/src/index.html
+++ b/src/index.html
@@ -16,9 +16,13 @@
 </head>
   <body>
     <!-- W taki sposbu dodajemy fragmenty w główny HTML-plik strony. -->
-    <include src="./partials/example.html"></include>
+   <!---- <include src="./partials/example.html"></include>-->
 
     <!-- Skrypt jest na samym dole kodu. On juz ma w sobie podłączony SAAS plik. -->
     <script src="./index.js" type="module"></script>
   </body>
+  <footer>
+    <include src="./partials/footer.html"></include>
+    <include src="./images/icons.svg"></include>
+  </footer>
 </html>
