--- a/src/index.html
+++ b/src/index.html
@@ -34,7 +34,7 @@
       <include src="./partials/blog.html"></include>
     </main>
     <footer>
-      <includa src="./partials/footer.html"></includa>
+      <include src="./partials/footer.html"></include>
     </footer>
     <include src="./partials/blog-modal.html"></include>
     <!-- Skrypt jest na samym dole kodu. On juz ma w sobie podłączony SAAS plik. -->
