--- a/src/index.html
+++ b/src/index.html
@@ -28,6 +28,7 @@
     </header>
     <main>
       <!-- W taki sposbu dodajemy fragmenty w główny HTML-plik strony. -->
+      <include src="./partials/hero.html"></include>
       <include src="./partials/about.html"></include>
       <include src="./partials/store.html"></include>
       <include src="./partials/delivery.html"></include>
