--- a/src/index.html
+++ b/src/index.html
@@ -38,8 +38,10 @@
       <include src="./partials/footer.html"></include>
     </footer>
     <include src="./partials/blog-modal.html"></include>
+    <include src="./partials/modal.menu.html"></include>
     <!-- Skrypt jest na samym dole kodu. On juz ma w sobie podłączony SAAS plik. -->
     <script src="./index.js" type="module"></script>
     <script src="./js/modal.js" type="module"></script>
+    <script src="'/js/mobile-menu.js"></script>
   </body>
 </html>
