--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
     <script src="./index.js" type="module"></script>
   </body>
   <footer>
-    <include src="./partials/footer.html"></include>
+    <include src="../partials/footer.html"></include>
     <!--<include src="./images/icons.svg"></include>-->
   </footer>
 </html>
