--- a/src/index.html
+++ b/src/index.html
@@ -19,11 +19,12 @@
    <!---- <include src="./partials/example.html"></include>-->
 
     
-  </body>
+  
   <footer>
     <include src="../partials/footer.html"></include>
-    <!--<include src="./images/icons.svg"></include>-->
+    <include src="./images/icons.svg"></include>
   </footer>
   <!-- Skrypt jest na samym dole kodu. On juz ma w sobie podłączony SAAS plik. -->
   <script src="./index.js" type="module"></script>
+</body>
 </html>
