--- a/src/index.html
+++ b/src/index.html
@@ -15,9 +15,14 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
 </head>
   <body>
+    <header>
+
+    </header>
     <!-- W taki sposbu dodajemy fragmenty w główny HTML-plik strony. -->
    <!---- <include src="./partials/example.html"></include>-->
+    <main>
 
+    </main>
     
   
   <footer>
