--- a/src/index.html
+++ b/src/index.html
@@ -14,22 +14,27 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
 </head>
-  <body>
-    <header>
-
-    </header>
-    <!-- W taki sposbu dodajemy fragmenty w główny HTML-plik strony. -->
-   <!---- <include src="./partials/example.html"></include>-->
-    <main>
-
-    </main>
-    
-  
+<body>
+  <header>
+    <include src="./partials/header.html"></include>
+  </header>
+  <main>
+    <!-- W taki sposob dodajemy fragmenty w główny HTML-plik strony. -->
+    <include src="./partials/hero.html"></include>
+    <include src="./partials/about.html"></include>
+    <include src="./partials/store.html"></include>
+    <include src="./partials/delivery.html"></include>
+    <include src="./partials/blog.html"></include>
+  </main>
   <footer>
     <include src="../partials/footer.html"></include>
     <include src="./images/icons.svg"></include>
   </footer>
-  <!-- Skrypt jest na samym dole kodu. On juz ma w sobie podłączony SAAS plik. -->
+  <include src="./partials/blog-modal.html"></include>
+  <include src="./partials/modal.menu.html"></include>
+  <!-- Skrypty są na samym dole kodu. One już mają w sobie podłączony plik SAAS. -->
   <script src="./index.js" type="module"></script>
+  <script src="./js/modal.js" type="module"></script>
+  <script src="./js/mobile-menu.js"></script>
 </body>
 </html>
