--- a/src/index.html
+++ b/src/index.html
@@ -19,10 +19,8 @@
 
     </header>
     <!-- W taki sposbu dodajemy fragmenty w główny HTML-plik strony. -->
-   <!---- <include src="./partials/example.html"></include>-->
-    <main>
-
-    </main>
+    <include src="./partials/example.html"></include>
+    
     
   
   <footer>
