--- a/src/index.html
+++ b/src/index.html
@@ -34,7 +34,7 @@
       <include src="./partials/blog.html"></include>
     </main>
     <footer>
-      <include src="../partials/footer.html"></include>
+      <include src="./partials/footer.html"></include>
     </footer>
     <include src="./partials/blog-modal.html"></include>
     <include src="./partials/modal.menu.html"></include>
